testdata/baselines/reference/submodule/conformance/topLevelThisAssignment.errors.txt
a.js(3,1): error TS2304: Cannot find name 'a'.
b.js(2,1): error TS2304: Cannot find name 'a'.


==== a.js (1 errors) ====
    this.a = 10;
    this.a;
    a;
    ~
!!! error TS2304: Cannot find name 'a'.
    
==== b.js (1 errors) ====
    this.a;
    a;
    ~
!!! error TS2304: Cannot find name 'a'.
    